# RoVi-2021

./: .gitignore  CMakeLists.txt  README.md  assimp_log.txt  main.cpp  main_BACKUP_48323.cpp  main_LOCAL_49051.cpp  rwsettings.xml
Project_WorkCell_Obstacle/: Scene.wc.xml  SceneCollisionSetup.prox.xml  Scene_ball.wc.xml
Project_WorkCell_Obstacle/UR5/UR-6-85-5-A/geometry_light/: joint3.stl
Project_WorkCell_Obstacle/parts/: Ball.ac.bak
Project_WorkCell_Obstacle/wsg50/: wsg50.xml
Project_WorkCell_Obstacle/wsg50/geometry/: FingerWeiss50_mount.mtl  scale.scad
Project_WorkCell_Obstacle/wsg50/geometry/fingerexchange/: Finger_exchanger.ac  Finger_exchanger.stl
experiment_data/P4_1_M3/: BlurSPTest.csv  BlurSPTest_binary.csv  BlurTest.csv  BlurTest_binary.csv  Data_Analysis_P4_1M3.mlx  G_10.csv  G_160.csv  G_20.csv  G_200.csv  G_40.csv  G_80.csv  Gaussian_HighNoise.csv  Gaussian_NoNoise.csv  Gaussian_VeryHighNoise.csv  ImageTest.csv  ImageTest_binary.csv  NoNoise.csv  SPTest.csv  SPTest_binary.csv  SP_10.csv  SP_20.csv  SP_40.csv  SP_50.csv  SP_60.csv  SP_80.csv  saltpepper_HighNoise.csv  saltpepper_VeryHighNoise.csv
experiment_data/combination/images/: Camera_left1.ppm  Camera_right.ppm  ImageLeft0.ppm  ImageLeft1.ppm  ImageLeft10.ppm  ImageLeft11.ppm  ImageLeft12.ppm  ImageLeft13.ppm  ImageLeft14.ppm  ImageLeft15.ppm  ImageLeft16.ppm  ImageLeft17.ppm  ImageLeft18.ppm  ImageLeft19.ppm  ImageLeft2.ppm  ImageLeft3.ppm  ImageLeft4.ppm  ImageLeft5.ppm  ImageLeft6.ppm  ImageLeft7.ppm  ImageLeft8.ppm  ImageLeft9.ppm  ImageRight0.ppm  ImageRight1.ppm  ImageRight10.ppm  ImageRight11.ppm  ImageRight12.ppm  ImageRight13.ppm  ImageRight14.ppm  ImageRight15.ppm  ImageRight16.ppm  ImageRight17.ppm  ImageRight18.ppm  ImageRight19.ppm  ImageRight2.ppm  ImageRight3.ppm  ImageRight4.ppm  ImageRight5.ppm  ImageRight6.ppm  ImageRight7.ppm  (+3 more)
experiment_data/combination/rwplays/no_obstacles/: RRT_visu_s_trial1.rwplay
experiment_data/combination/rwplays/with_obstacles/: RRT_visu_s_trial0.rwplay  RRT_visu_s_trial1.rwplay  RRT_visu_s_trial2.rwplay  RRT_visu_s_trial3.rwplay  RRT_visu_s_trial4.rwplay  RRT_visu_s_trial5.rwplay
experiment_data/p3_2/: combined_collision_landscape_SIDE.csv  combined_collision_landscape_TOP.csv  p3_2_Contourplot-DESKTOP-EGV9C1K.mlx  p3_2_Contourplot.mlx  pick.rwplay  pick_collision_landscape_SIDE.csv  pick_collision_landscape_TOP.csv  place.rwplay  place_collision_landscape_SIDE.csv  place_collision_landscape_TOP.csv  visu.rwplay  visu_BACKUP_48239.rwplay
experiment_data/p3_2/final_test_files/: p3_2_Contourplot.mlx
experiment_data/p3_3/: matlab_test.mlx
experiment_data/p4_dense/images/: Camera_left.ppm  Camera_right.ppm
experiment_data/p4_dense/pcls/: bottle.ply  bottle_sampled.pcd  object.pcd  object_points.csv  output.pcd  output_vox.pcd  rwsettings.xml  scene_points.csv  spatial_test.mlx
roviproblems/includes/: combination.hpp  generate_images.hpp  p3_2.hpp  p3_3.hpp  p4_1_M3.hpp  p4_dense.hpp  rw_camera.hpp  rw_image_handler.hpp
roviproblems/src/: combination.cpp  p3_2.cpp  p3_3.cpp  p4_1_M3.cpp  p4_dense.cpp
workcell/: Scene.wc.xml  Scene_ball.wc.xml
workcell/UR5/UR-6-85-5-A/: Device.wc.xml  UR6855A_light.wc.xml
workcell/UR5/UR-6-85-5-A/geometry_light/: joint0.stl
workcell/parts/: Ball.ac.bak  Ball.stl  Bottle.3ds  bottle.ac  bottle.ac.bak  bottle_backup.ac  output.pcd
workcell/table/: Sigmund_table.mtl
workcell/wsg50/: GripperCollisionSetup.xml  wsg50.dwc.xml  wsg50.xml
workcell/wsg50/geometry/: FingerWeiss50.mtl  FingerWeiss50_tip.mtl
(+316 files in other folders)
